--- a/output/.gitignore
+++ b/output/.gitignore
@@ -33,6 +33,7 @@ CMakeCache.txt
 CMakeFiles/
 cmake_install.cmake
 compile_commands.json
+package-lock.json
 
 # Fichiers générés par divers outils
 .vscode/
