[FIX] npm run format

--- a/output/package.json
+++ b/output/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "The goal of this project is to implement a air type game bot in C++",
     "scripts": {
-      "format": "find . \\( -name '*.hpp' -o -name '*.cpp' \\) -exec clang-format -i {} +"
+      "format": "find . \\( -name '*.hpp' -o -name '*.cpp' \\) -exec clang-format-12 -i {} +"
     },
     "author": "Robin Chabert, Aymeric Chaverot, Valentin Woehrel, Eddie Klai, Anton Jourdheuil",
     "license": "ISC"
