--- a/output/src/GameEngine/EntityManager/CMakeLists.txt
+++ b/output/src/GameEngine/EntityManager/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD 20)
 include_directories(./)
 
 add_executable(entity_manager
+    ../main.cpp
     EntityManager.cpp
     ComponentManager/ComponentManager.cpp
     ComponentManager/GenericComponents/ULongComponent/ULongComponent.cpp
