--- a/.github/workflows/test_compilation.yml
+++ b/.github/workflows/test_compilation.yml
@@ -5,13 +5,12 @@ on:
     branches: [ 'main', 'dev' ]
 
 jobs:
-  name: Setup CPP
-        uses: actions/setup-cpp@v3
-        with:
-          cpp-version: "latest"
-
-      - name: Install clang-format
-        run: sudo apt-get install -y clang-format
+  Setup CPP:
+    uses: actions/setup-cpp@v3
+    with:
+    cpp-version: "latest"
+  Install clang-format:
+    run: sudo apt-get install -y clang-format
   test_code_style:
     runs-on: 'ubuntu-latest'
     steps:
