--- a/.github/workflows/test_compilation.yml
+++ b/.github/workflows/test_compilation.yml
@@ -2,16 +2,12 @@ name: 'Test compilation'
 
 on:
   pull_request:
-    branches: [ 'main', 'dev' ]
+    branches: ['main', 'dev']
 
 jobs:
-  name: Setup CPP
-        uses: actions/setup-cpp@v3
-        with:
-          cpp-version: "latest"
-
-      - name: Install clang-format
-        run: sudo apt-get install -y clang-format
+  Setup CPP:
+    - name: Install clang-format
+      run: sudo apt-get install -y clang-format
   test_code_style:
     runs-on: 'ubuntu-latest'
     steps:
