--- a/.github/workflows/test_compilation.yml
+++ b/.github/workflows/test_compilation.yml
@@ -6,8 +6,15 @@ on:
 
 jobs:
   Setup CPP:
-    - name: Install clang-format
-      run: sudo apt-get install -y clang-format
+    runs-on: 'ubuntu-latest'
+    steps:
+      - name: Setup CPP
+        uses: actions/setup-cpp@v3
+        with:
+          cpp-version: "latest"
+
+      - name: Install clang-format
+        run: sudo apt-get install -y clang-format
   test_code_style:
     runs-on: 'ubuntu-latest'
     steps:
