--- a/.github/workflows/test_compilation.yml
+++ b/.github/workflows/test_compilation.yml
@@ -5,7 +5,7 @@ on:
     branches: ['main', 'dev']
 
 jobs:
-  Setup CPP:
+  setup_pp:
     runs-on: 'ubuntu-latest'
     steps:
       - name: Setup CPP
