--- a/.github/workflows/test_compilation.yml
+++ b/.github/workflows/test_compilation.yml
@@ -14,14 +14,13 @@ jobs:
           cpp-version: "latest"
       - name: Install clang-format
         run: sudo apt-get install -y clang-format
-
-  test_code_style:
-    runs-on: 'ubuntu-latest'
-    steps:
-      - uses: 'actions/checkout@v3'
-      - name: 'Check code style'
-        run: 'bash output/check_format.sh'
-        timeout-minutes: 1
+      - name: test_code_style
+        runs-on: 'ubuntu-latest'
+        steps:
+          - uses: 'actions/checkout@v3'
+          - name: 'Check code style'
+            run: 'bash output/check_format.sh'
+            timeout-minutes: 1
 
   test_compilation:
     runs-on: ubuntu-latest
