--- a/.github/workflows/test_compilation.yml
+++ b/.github/workflows/test_compilation.yml
@@ -5,23 +5,16 @@ on:
     branches: ['main', 'dev']
 
 jobs:
-  setup_pp:
+  formatting_check:
+    name: Formatting Check
     runs-on: 'ubuntu-latest'
     steps:
-      - name: Setup CPP
-        uses: aminya/setup-cpp@v0.36.1
-        with:
-          cpp-version: "latest"
-      - name: Install clang-format
-        run: sudo apt-get install -y clang-format
-      - name: Checkout
-        uses: 'actions/checkout@v3'
-      - name: Display Clang Version
-        run: |
-          clang --version
-      - name: test_code_style
-        run: 'bash output/check_format.sh'
-        timeout-minutes: 1
+        - uses: 'actions/checkout@v3'
+        - name: 'Check formatting'
+          uses: 'jidicula/clang-format-action@v4.11.0'
+          with:
+            clang-format-version: '17'
+            check-path: 'output/src'
 
   test_compilation:
     runs-on: ubuntu-latest
