--- a/.github/workflows/test_compilation.yml
+++ b/.github/workflows/test_compilation.yml
@@ -15,6 +15,7 @@ jobs:
           with:
             clang-format-version: '17'
             check-path: 'output/src'
+            fallback-style: 'Mozilla'
 
   test_compilation:
     runs-on: ubuntu-latest
