--- a/.github/workflows/test_compilation.yml
+++ b/.github/workflows/test_compilation.yml
@@ -8,13 +8,18 @@ jobs:
   formatting_check:
     name: Formatting Check
     runs-on: 'ubuntu-latest'
+    strategy:
+        matrix:
+            path:
+                - 'output/src/GameEngine/*.cpp'
+                - 'output/src/GameEngine/*.hpp'
     steps:
         - uses: 'actions/checkout@v3'
         - name: 'Check formatting'
           uses: 'jidicula/clang-format-action@v4.11.0'
           with:
-            clang-format-version: '17'
-            check-path: 'output/src'
+            clang-format-version: '16'
+            check-path: ${{ matrix.path }}
             fallback-style: 'Mozilla'
 
   test_compilation:
