--- a/.github/workflows/test_compilation.yml
+++ b/.github/workflows/test_compilation.yml
@@ -8,18 +8,13 @@ jobs:
   formatting_check:
     name: Formatting Check
     runs-on: 'ubuntu-latest'
-    strategy:
-        matrix:
-            path:
-                - 'output/src/GameEngine/*.cpp'
-                - 'output/src/GameEngine/*.hpp'
     steps:
         - uses: 'actions/checkout@v3'
         - name: 'Check formatting'
           uses: 'jidicula/clang-format-action@v4.11.0'
           with:
             clang-format-version: '17'
-            check-path: ${{ matrix.path }}
+            check-path: 'output/src'
             fallback-style: 'Mozilla'
 
   test_compilation:
