--- a/.github/workflows/test_compilation.yml
+++ b/.github/workflows/test_compilation.yml
@@ -1,23 +1,14 @@
 name: 'Test compilation'
 
 on:
-  pull_request:
-    branches: ['main', 'dev']
+  workflow_run:
+    workflows: ["Formatting Check"]
+    types:
+      - completed
 
 jobs:
-  formatting_check:
-    name: Formatting Check
-    runs-on: 'ubuntu-latest'
-    steps:
-        - uses: 'actions/checkout@v3'
-        - name: 'Check formatting'
-          uses: 'jidicula/clang-format-action@v4.11.0'
-          with:
-            clang-format-version: '17'
-            check-path: 'output/src'
-            fallback-style: 'Mozilla'
-
   test_compilation:
+    name: Test compilation EPITECH docker
     runs-on: ubuntu-latest
     container:
       image: epitechcontent/epitest-docker:latest
