--- a/.github/workflows/test_compilation.yml
+++ b/.github/workflows/test_compilation.yml
@@ -1,19 +1,30 @@
-name: 'Test compilation'
+name: 'Integrity check'
 
 on:
-  workflow_run:
-    workflows: ["Formatting Check"]
-    types:
-      - completed
+  pull_request:
+    branches: ['main', 'dev']
 
 jobs:
+  formatting_check:
+    name: 'Formatting Check'
+    runs-on: 'ubuntu-latest'
+    steps:
+        - uses: 'actions/checkout@v3'
+        - name: 'Check formatting'
+          uses: 'jidicula/clang-format-action@v4.11.0'
+          with:
+            clang-format-version: '17'
+            check-path: 'output/src'
+            fallback-style: 'Mozilla'
+
   test_compilation:
-    name: Test compilation EPITECH docker
+    name: 'Test Compilation EPITECH Docker'
+    needs: formatting_check
     runs-on: ubuntu-latest
     container:
       image: epitechcontent/epitest-docker:latest
     steps:
       - uses: 'actions/checkout@v3'
-      - name: 'Check compilation'
+      - name: 'Check Compilation'
         run: 'bash output/compile.sh'
         timeout-minutes: 5
