--- a/output/src/GameEngine/EntityManager/CMakeLists.txt
+++ b/output/src/GameEngine/EntityManager/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_STANDARD 20)
 
 include_directories(./)
 
+find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
+
 add_executable(entity_manager
     ../main.cpp
     EntityManager.cpp
@@ -14,4 +16,8 @@ add_executable(entity_manager
     ComponentManager/GenericComponents/DoubleComponent/DoubleComponent.cpp
     ComponentManager/GenericComponents/StringComponent/StringComponent.cpp
     ComponentManager/AComponent/AComponent.cpp
+
+    ../RendererModule/RendererModule.cpp
 )
+
+target_link_libraries(WindowModule sfml-graphics sfml-window sfml-system)
