--- a/output/src/GameEngine/CMakeLists.txt
+++ b/output/src/GameEngine/CMakeLists.txt
@@ -2,9 +2,11 @@ cmake_minimum_required(VERSION 3.10)
 
 project(ECS)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(EntityManager)
 add_subdirectory(MobModule)
 
-add_executable(ECS main.cpp)
+add_library(GameEngine STATIC
+        GameEngine.cpp
+        )
