--- a/output/src/GameEngine/MobModule/CMakeLists.txt
+++ b/output/src/GameEngine/MobModule/CMakeLists.txt
@@ -6,10 +6,11 @@ set(CMAKE_CXX_STANDARD 20)
 
 include_directories(./)
 
-add_library(mob_module
-    MobModule/Components/HealthComponent.cpp
-    MobModule/Components/AttackComponent.cpp
-    MobModule/Components/DefenseComponent.cpp
-    MobModule/Components/SpeedComponent.cpp
-    MobModule/Components/ManaComponent.cpp
-    MobModule/Components/StaminaComponent.cpp)
+add_library(mob_module STATIC
+    Components/HealthComponent/HealthComponent.cpp
+    Components/AttackComponent/AttackComponent.cpp
+    Components/DefenseComponent/DefenseComponent.cpp
+#    Components/SpeedComponent.cpp
+#    Components/ManaComponent.cpp
+#    Components/StaminaComponent.cpp
+)
