[ADD] all cpp files for renderermodule and entitymanager

--- a/output/src/Client/CMakeLists.txt
+++ b/output/src/Client/CMakeLists.txt
@@ -4,9 +4,9 @@ project(Game)
 
 set(CMAKE_CXX_STANDARD 20)
 
-include_directories(../GameEngine/)
-add_subdirectory(../GameEngine/ ../GameEngine/build)
-#add_subdirectory(../GameEngine/RendererModule/)
+include_directories(../)
+include_directories(../GameEngine/ ../GameEngine/build)
+add_subdirectory(../GameEngine/RendererModule/ ../GameEngine/RendererModule/build)
 add_subdirectory(../GameEngine/EntityManager/ ../GameEngine/EntityManager/build)
 
 
@@ -14,10 +14,17 @@ find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
 
 add_executable(Game
         main.cpp
-        src/Game/Game.cpp
         ../GameEngine/GameEngine.cpp
         ../GameEngine/RendererModule/RendererModule.cpp
+        ../GameEngine/RendererModule/WindowManager/Window.cpp
+        ../GameEngine/RendererModule/WindowManager/Components/AnimationComponent/AnimationComponent.cpp
+        ../GameEngine/RendererModule/WindowManager/Components/SpriteComponent/SpriteComponent.cpp
         ../GameEngine/EntityManager/EntityManager.cpp
+        ../GameEngine/EntityManager/ComponentManager/ComponentManager.cpp
+        ../GameEngine/EntityManager/ComponentManager/AComponent/AComponent.cpp
+        ../GameEngine/EntityManager/ComponentManager/GenericComponents/DoubleComponent/DoubleComponent.cpp
+        ../GameEngine/EntityManager/ComponentManager/GenericComponents/ULongComponent/ULongComponent.cpp
+        ../GameEngine/EntityManager/ComponentManager/GenericComponents/StringComponent/StringComponent.cpp
 #        ../GameEngine/HmiModule/HmiModule.cpp
 #        ../GameEngine/LocalStorageModule/LocalStorageModule.cpp
 #        ../GameEngine/NetworkingModule/NetworkingModule.cpp
