--- a/.github/workflows/automatic_release.yml
+++ b/.github/workflows/automatic_release.yml
@@ -14,6 +14,10 @@ jobs:
               uses: actions/checkout@v4
             - name: 'Binary build'
               run: 'cd output && bash build_release.sh'
+            - name: 'Upload binaries'
+              uses: actions/upload-artifact@v3
+              with:
+                  path: output/release
 
     upload:
         needs: build
