--- a/.github/workflows/automatic_release.yml
+++ b/.github/workflows/automatic_release.yml
@@ -32,9 +32,12 @@ jobs:
             - name: 'Pack binaries'
               run: 'cd output/release && tar -czf release.tar.gz *'
             - name: 'Publish Release'
-              uses: marvinpinto/action-automatic-releases@v1.2.1
+              uses: softprops/action-gh-release@v1
               with:
-                repo_token: ${{ secrets.API_TOKEN_GITHUB }}
-                automatic_release_tag: "latest"
+                token: ${{ secrets.API_TOKEN_GITHUB }}
                 files: 'output/release/release.tar.gz'
-                title: 'Build ${{ github.ref }}'
+                tag_name: ${{ github.ref }}
+                body: |
+                    Release ${{ github.ref }}
+                    ---
+                    Automatic release by GitHub Actions
