[ADD] base of the client

--- a/output/src/Client/CMakeLists.txt
+++ b/output/src/Client/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(Game
         ../GameEngine/EntityManager/ComponentManager/GenericComponents/DoubleComponent/DoubleComponent.cpp
         ../GameEngine/EntityManager/ComponentManager/GenericComponents/ULongComponent/ULongComponent.cpp
         ../GameEngine/EntityManager/ComponentManager/GenericComponents/StringComponent/StringComponent.cpp
+        src/Game/Game.cpp
 #        ../GameEngine/HmiModule/HmiModule.cpp
 #        ../GameEngine/LocalStorageModule/LocalStorageModule.cpp
 #        ../GameEngine/NetworkingModule/NetworkingModule.cpp
