--- a/output/src/GameEngine/EntityManager/CMakeLists.txt
+++ b/output/src/GameEngine/EntityManager/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 
 project(EntityManager)
 
-set(CMAKE_CXX_STANDARD 20)
+# set(CMAKE_CXX_STANDARD 20)
+
+set(CMAKE_CXX_COMPILER g++)
 
 include_directories(./)
 
