[FIX] Renderer module

--- a/output/src/Client/CMakeLists.txt
+++ b/output/src/Client/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(Game
         ../GameEngine/RendererModule/WindowManager/Window.cpp
         ../GameEngine/RendererModule/Components/AnimationComponent/AnimationComponent.cpp
         ../GameEngine/RendererModule/Components/SpriteComponent/SpriteComponent.cpp
+        ../GameEngine/RendererModule/Components/TextComponent/TextComponent.cpp
         ../GameEngine/EntityManager/EntityManager.cpp
         ../GameEngine/EntityManager/ComponentManager/ComponentManager.cpp
         ../GameEngine/EntityManager/ComponentManager/AComponent/AComponent.cpp
