[FIX] Cmake mobmodule

--- a/output/src/GameEngine/MobModule/CMakeLists.txt
+++ b/output/src/GameEngine/MobModule/CMakeLists.txt
@@ -6,11 +6,12 @@ set(CMAKE_CXX_STANDARD 20)
 
 include_directories(./)
 
-add_library(mob_module STATIC
-    Components/HealthComponent/HealthComponent.cpp
+add_library(engin_mobs
     Components/AttackComponent/AttackComponent.cpp
     Components/DefenseComponent/DefenseComponent.cpp
-#    Components/SpeedComponent.cpp
-#    Components/ManaComponent.cpp
-#    Components/StaminaComponent.cpp
+    Components/HealthComponent/HealthComponent.cpp
+    Components/IAComponent/IAComponent.cpp
+    Components/MobTypeComponent/MobTypeComponent.cpp
+    Components/StateComponent/StateComponent.cpp
+    Components/VisionComponent/VisionComponent.cpp
 )
