--- a/output/CMakeLists.txt
+++ b/output/CMakeLists.txt
@@ -4,24 +4,12 @@ project(Networking)
 
 set(CMAKE_CXX_STANDARD 20)
 
-# Add any additional libraries here
 set(LIBS -lpthread)
 
-set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/GameEngine/NetworkingModule)
+# Set the source directories
 set(CLIENT_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/Client)
 set(SERVER_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/Server)
-set(BUILD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/build)
 
-# NetworkingModule library
-file(GLOB_RECURSE SRCS ${SRC_DIR}/*.cpp)
-add_library(engine_networking ${SRCS})
-
-# Client executable
-file(GLOB_RECURSE CLIENT_SRCS ${CLIENT_SRC_DIR}/*.cpp)
-add_executable(r-type_client ${CLIENT_SRCS})
-target_link_libraries(r-type_client engine_networking ${LIBS})
-
-# Server executable
-file(GLOB_RECURSE SERVER_SRCS ${SERVER_SRC_DIR}/*.cpp)
-add_executable(r-type_server ${SERVER_SRCS})
-target_link_libraries(r-type_server engine_networking ${LIBS})
+# Include the CMakeLists.txt files in the Client and Server directories
+add_subdirectory(${CLIENT_SRC_DIR} client_build)
+add_subdirectory(${SERVER_SRC_DIR} server_build)
