--- a/output/src/Client/CMakeLists.txt
+++ b/output/src/Client/CMakeLists.txt
@@ -4,13 +4,23 @@ project(Game)
 
 set(CMAKE_CXX_STANDARD 20)
 
-include_directories(../)
-include_directories(../GameEngine/ ./GameEngine/build)
-add_subdirectory(../GameEngine/RendererModule/ ./GameEngine/RendererModule/build)
-add_subdirectory(../GameEngine/EntityManager/ ./GameEngine/EntityManager/build)
+# Include directories
+include_directories(
+        ${CMAKE_CURRENT_SOURCE_DIR}
+        ${CMAKE_CURRENT_SOURCE_DIR}/../
+        ${CMAKE_CURRENT_SOURCE_DIR}/../GameEngine/
+        ${CMAKE_CURRENT_SOURCE_DIR}/../GameEngine/build/
+        ${CMAKE_CURRENT_SOURCE_DIR}/../GameEngine/RendererModule/
+        ${CMAKE_CURRENT_SOURCE_DIR}/../GameEngine/RendererModule/build/
+        ${CMAKE_CURRENT_SOURCE_DIR}/../GameEngine/EntityManager/
+        ${CMAKE_CURRENT_SOURCE_DIR}/../GameEngine/EntityManager/build/
+)
 
+# Add subdirectories
+add_subdirectory(../GameEngine/RendererModule/ ${CMAKE_CURRENT_BINARY_DIR}/RendererModule)
+add_subdirectory(../GameEngine/EntityManager/ ${CMAKE_CURRENT_BINARY_DIR}/EntityManager)
 
-find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
+find_package(SFML 2.6 COMPONENTS graphics window system REQUIRED)
 
 add_executable(Game
         src/main.cpp
@@ -27,10 +37,14 @@ add_executable(Game
         ../GameEngine/EntityManager/ComponentManager/GenericComponents/ULongComponent/ULongComponent.cpp
         ../GameEngine/EntityManager/ComponentManager/GenericComponents/StringComponent/StringComponent.cpp
         src/Game/Game.cpp
-#        ../GameEngine/HmiModule/HmiModule.cpp
-#        ../GameEngine/LocalStorageModule/LocalStorageModule.cpp
-#        ../GameEngine/NetworkingModule/NetworkingModule.cpp
-#        ../GameEngine/PhysicModule/PhysicModule.cpp
-)
+        # ../GameEngine/HmiModule/HmiModule.cpp
+        # ../GameEngine/LocalStorageModule/LocalStorageModule.cpp
+        # ../GameEngine/NetworkingModule/NetworkingModule.cpp
+        # ../GameEngine/PhysicModule/PhysicModule.cpp
+        )
 
-target_link_libraries(Game sfml-graphics sfml-window sfml-system)
+# Link SFML libraries
+target_link_libraries(Game PRIVATE sfml-graphics sfml-window sfml-system)
+
+# Link the libraries from RendererModule and EntityManager
+target_link_libraries(Game PRIVATE RendererModule EntityManager)
