--- a/output/src/Server/CMakeLists.txt
+++ b/output/src/Server/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(Server)
+project(r-type_server)
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -10,7 +10,7 @@ set(LIBS -lpthread)
 set(SERVER_SRC ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
 
 # Create the executable for the server with only main.cpp
-add_executable(server ${SERVER_SRC})
+add_executable(r-type_server ${SERVER_SRC})
 
 # Link libraries if needed
-target_link_libraries(server ${LIBS})
+target_link_libraries(r-type_server ${LIBS})
