fix Client and not client

--- a/output/CMakeLists.txt
+++ b/output/CMakeLists.txt
@@ -7,13 +7,13 @@ set(CMAKE_CXX_STANDARD 20)
 # Add any additional libraries here
 set(LIBS pthread)
 
-add_subdirectory(src/client)
+add_subdirectory(src/Client)
 add_subdirectory(src/Server)
 
 # Call cmake in the src/client directory
 execute_process(
-        COMMAND ${CMAKE_COMMAND} ${CMAKE_SOURCE_DIR}/src/client
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/src/client
+        COMMAND ${CMAKE_COMMAND} ${CMAKE_SOURCE_DIR}/src/Client
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/src/Client
         RESULT_VARIABLE result
         COMMAND cp r-type_client ${CMAKE_SOURCE_DIR}
         COMMAND echo "done client"
@@ -21,7 +21,7 @@ execute_process(
 )
 
 if(result)
-    message(FATAL_ERROR "CMake step for src/client failed: ${result}")
+    message(FATAL_ERROR "CMake step for src/Client failed: ${result}")
 endif()
 
 execute_process(
