fix spriteComponent, entity Id, generation of new entity by function

--- a/output/.gitignore
+++ b/output/.gitignore
@@ -35,6 +35,8 @@ cmake_install.cmake
 compile_commands.json
 package-lock.json
 
+cmake-build-debug/
+src/Client/Game
 
 Makefile
 client_executable
