[ADD] sound class component

--- a/output/src/Client/CMakeLists.txt
+++ b/output/src/Client/CMakeLists.txt
@@ -37,6 +37,8 @@ add_executable(r-type_client
         ../GameEngine/PhysicModule/Components/BoundingBoxComponent/BoundingBoxComponent.cpp
         ../GameEngine/PhysicModule/Components/MovementComponent/MovementComponent.cpp
         ../GameEngine/PhysicModule/Components/TransformComponent/TransformComponent.cpp
+        ../GameEngine/RendererModule/Components/SoundComponent/SoundComponent.hpp
+        ../GameEngine/RendererModule/Components/SoundComponent/SoundComponent.cpp
 
         # ../GameEngine/LocalStorageModule/LocalStorageModule.cpp
         # ../GameEngine/NetworkingModule/NetworkingModule.cpp
