[MODIF] HmiModule class

--- a/output/src/Client/CMakeLists.txt
+++ b/output/src/Client/CMakeLists.txt
@@ -54,6 +54,9 @@ add_executable(r-type_client
         ../GameEngine/NetworkingModule/exceptions/CouldNotReceiveException/CouldNotReceiveException.cpp
         ../GameEngine/NetworkingModule/exceptions/CouldNotSendException/CouldNotSendException.cpp
         ../GameEngine/NetworkingModule/exceptions/SocketNotCreatedException/SocketNotCreatedException.cpp
+        ../GameEngine/HmiModule/HmiModule.cpp
+        ../GameEngine/HmiModule/HmiModule.hpp
+
 
         # ../GameEngine/LocalStorageModule/LocalStorageModule.cpp
         # ../GameEngine/NetworkingModule/NetworkingModule.cpp
