fix cmakelist so ez

--- a/output/src/Client/CMakeLists.txt
+++ b/output/src/Client/CMakeLists.txt
@@ -55,6 +55,8 @@ add_executable(r-type_client
         ../GameEngine/NetworkingModule/exceptions/CouldNotSendException/CouldNotSendException.cpp
         ../GameEngine/NetworkingModule/exceptions/SocketNotCreatedException/SocketNotCreatedException.cpp
         ../GameEngine/HmiModule/HmiModule.cpp
+        ../GameEngine/HmiModule/HmiModule.hpp
+
 
 
         # ../GameEngine/LocalStorageModule/LocalStorageModule.cpp
