[ADD] Serializer class to Server project

--- a/output/src/Server/CMakeLists.txt
+++ b/output/src/Server/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
 # Specify the source file
 set(SERVER_SRC  ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
                 ${CMAKE_CURRENT_SOURCE_DIR}/src/Server/Server.cpp
+                ${CMAKE_CURRENT_SOURCE_DIR}/src/Serializer/Serializer.cpp
                 ${CMAKE_CURRENT_SOURCE_DIR}/../GameEngine/GameEngine.cpp
                 ${CMAKE_CURRENT_SOURCE_DIR}/../GameEngine/NetworkingModule/NetworkingModule.cpp
                 ${CMAKE_CURRENT_SOURCE_DIR}/../GameEngine/NetworkingModule/Client/Client.cpp
