[ADD] Serializer class to NetworkingModule and made the serialized data static

--- a/output/src/GameEngine/NetworkingModule/CMakeLists.txt
+++ b/output/src/GameEngine/NetworkingModule/CMakeLists.txt
@@ -17,7 +17,9 @@ add_library(engine_networking
     exceptions/CouldNotReceiveException/CouldNotReceiveException.cpp
     exceptions/CouldNotSendException/CouldNotSendException.cpp
     exceptions/SocketNotCreatedException/SocketNotCreatedException.cpp
-    Messaging/Messager.cpp)
+    Messaging/Messager.cpp
+    Serializer/Serializer.cpp
+    )
 
 
 add_custom_command(TARGET engine_networking POST_BUILD
