[ADD] gamestate working go to game and return if u want

--- a/output/src/Client/CMakeLists.txt
+++ b/output/src/Client/CMakeLists.txt
@@ -60,6 +60,8 @@ add_executable(r-type_client
         ../GameEngine/NetworkingModule/Serializer/Serializer.cpp
         ../GameEngine/HmiModule/HmiModule.cpp
         ../GameEngine/HmiModule/HmiModule.hpp
+        src/Game/ClientMenuManagement/ClientSetDisplay.cpp
+        src/Game/ClientStateManagement/ClientStateManagement.cpp
 
 
         # ../GameEngine/LocalStorageModule/LocalStorageModule.cpp
